Fix max-width for YouTube iframe on small screens

--- a/assets/sass/components/_link-embedder.scss
+++ b/assets/sass/components/_link-embedder.scss
@@ -1,3 +1,8 @@
+.embed.for-youtube iframe {
+  max-width: 90vw;
+  max-height: (344 / 459 * 90vw);
+}
+
 .le-photo img {
   cursor: zoom-in;
 }
